@@ -219,21 +219,8 @@ class ScreenDefinition {
 
         ResourceReference lastScreenRef = sfi.ecfi.resourceFacade.getLocationReference(location)
         if (lastScreenRef.supportsAll()) {
-            StringBuilder fileLoc = new StringBuilder(lastScreenRef.location)
-            // get rid of the prefix, before the ":"
-            // we probably shouldn't do this, causes problems on Windows and shouldn't be needed: fileLoc.delete(0, fileLoc.indexOf(":")+1)
-            // get rid of the suffix, probably .xml but use .*
-            if (fileLoc.lastIndexOf(".") > 0) fileLoc.delete(fileLoc.lastIndexOf("."), fileLoc.length())
-            fileLoc.append(pathName)
-
-            ResourceReference theFile = sfi.ecfi.resourceFacade.getLocationReference(fileLoc.toString())
-            if (theFile.exists && theFile.isFile()) contentRef = theFile
-
-            for (String extToTry in sfi.ecfi.resourceFacade.templateRenderers.keySet()) {
-                if (contentRef != null) break
-                theFile = sfi.ecfi.resourceFacade.getLocationReference(fileLoc.toString() + extToTry)
-                if (theFile.exists && theFile.isFile()) contentRef = theFile
-            }
+            // NOTE: this caches internally so consider getting rid of subContentRefByPath
+            contentRef = lastScreenRef.findChildResource(pathName)
         } else {
             logger.warn("Not looking for sub-content [${pathName}] under screen [${location}] because screen location does not support exists, isFile, etc")
         }
