@@ -25,6 +25,7 @@
         <cache name="resource.ftl.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
         <cache name="resource.wiki.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
         <cache name="resource.text.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
+        <cache name="resource.reference.location" expire-time-idle="0" expire-time-live="0" max-elements="10000"/>
 
         <!-- this is a count of all artifact hits, expire once idle for over 15 minutes -->
         <cache name="artifact.tarpit.hits" expire-time-idle="900" expire-time-live="0" max-elements="10000"/>
