@@ -25,6 +25,7 @@
         <cache name="resource.ftl.location" expire-time-idle="5"/>
         <cache name="resource.cwiki.location" expire-time-idle="5"/>
         <cache name="resource.text.location" expire-time-idle="5"/>
+        <cache name="resource.reference.location" expire-time-idle="5"/>
     </cache-list>
     
     <server-stats>
