@@ -81,6 +81,9 @@ This release includes:
   - ExampleContent entity and corresponding screen that supports
     uploading and downloading JCR content
   - Support for username and password for remote JCR repository access
+  - Added ResourceReference.findChildResource() method to replace the code
+    used only for subscreen references, expand that functionality and make
+    it reusable for wiki content, etc
 - Fleshed out ValidationError functionality including display in apps.xml
   and considering the ec.message.validationErrors list for storing error
   details in session between redirects, and changed entity and service
